# RoboDog_v3

./: README.md
sources/: CMakeLists.txt  Filters.cpp  IK.cpp  Leg.cpp  MathHelpers.cpp  Utils.cpp  package.xml  setup.py
sources/GCODE/: test.gcode
sources/Include/: BaseState.h  Button.h  CommandMenu.h  Factory.h  Filters.h  GCodeController.h  IK.h  Joint.h  Leg.h  MathHelpers.h  MoveParams.h  MovePrimitives.h  RemoteController.h  Robot.h  SoundService.h  Utils.h
sources/Include/Servos/: LX16a.h  Servo.h  ServoController.h
sources/Joints/: JointDouble.cpp  JointSingle.cpp
sources/Misc/: 99-usb.rules  run_robodog_client  run_robodog_hw
sources/RemoteControl/: Button.cpp  CommandMenu.cpp  RemoteController.cpp
sources/Robots/: RobotV2.cpp  RobotV3.cpp
sources/Services/: RobotClient.cpp  RobotHW.cpp  SayService.cpp
sources/Servos/: LX16a.cpp  Servo.cpp  ServoController.cpp  ServoLX16a.cpp
sources/Trajectory/: BaseState.cpp  GCodeController.cpp  MoveParams.cpp  MovePrimitives.cpp
sources/launch/: robodog.launch
sources/srv/: GcodeService.srv  SayService.srv
